[developing]: added GetAllParticipants endpoint, fixed swagger
